# GestorClientes

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  db_init.py  main.py  main_with_ui.py  models.py  web.py
app/routers/: auth.py  clients.py  dashboard.py  reports.py
app/static/: main.js
app/templates/: admin1.html  admin2.html  base.html  client.html  home.html  login.html
tests/: test_smoke.py
