
[tool.poetry]
name = "gestion-clientes-web"
version = "0.1.0"
description = "Plataforma web para gestión de clientes con tres roles, subida de archivos, reportes y dashboard."
authors = ["Enrique Diaz Ocampo"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version="^0.30.0"}
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.4.0"
pandas = "^2.2.2"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.6.4"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
